--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,9 +1,12 @@
 FROM node:20-bookworm-slim AS deps
 WORKDIR /app
 
-# Install deps
+ENV NODE_TLS_REJECT_UNAUTHORIZED=0
+RUN npm config set registry https://registry.npmjs.org/
+RUN npm config set strict-ssl false
+
 COPY package.json package-lock.json ./
-RUN npm ci --no-audit --no-fund
+RUN npm ci --no-audit --no-fund --legacy-peer-deps
 
 FROM node:20-bookworm-slim AS builder
 WORKDIR /app
@@ -11,7 +14,6 @@ WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
 COPY . .
 
-# Prisma client + build
 RUN npx prisma generate
 RUN npm run build
 
@@ -19,7 +21,6 @@ FROM node:20-bookworm-slim AS runner
 WORKDIR /app
 ENV NODE_ENV=production
 
-# Only copy what we need to run
 COPY --from=builder /app/package.json ./package.json
 COPY --from=builder /app/package-lock.json ./package-lock.json
 COPY --from=builder /app/node_modules ./node_modules
@@ -29,5 +30,4 @@ COPY --from=builder /app/public ./public
 
 EXPOSE 3000
 
-# NOTE: Migrations/seed are run via docker-compose command.
-CMD ["npm", "run", "start"]
+CMD sh -c "npm run migrate && npm run prisma:generate && npm run seed && npm run start"
