--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,9 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
+# lock files
+package-lock.json
+
 # env files (can opt-in for committing if needed)
 .env*
 !.env.example
@@ -41,3 +44,6 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# editor settings
+.vscode/
